--- a/src/assets/components/styles/LocationInfo.css
+++ b/src/assets/components/styles/LocationInfo.css
@@ -1,31 +1,52 @@
-.location_dad{
+.location_dad_nav {
 
-    display: grid;
-align-items: center;
-justify-content: center;
-padding-left: 5%;
-padding-right: 5%;
-
-
-}
-
-.location_title{
-display: flex;
-align-items: center;
-justify-content: center;
-padding-bottom: 3%;
-border: 1px solid black;
-
-}
-
-.location_ul{
-    
     display: flex;
-    border: 1px solid black;
-    gap: 2%;
-    justify-content: space-between;
-    margin-bottom: 5%;
-    text-align: center;
+    align-items: center;
+    justify-content: center;
+
 }
 
-.location_item{}
+
+.location_dad {
+    margin-top: 5vh;
+    min-width: 80vw;
+    display: grid;
+    place-content: center;
+
+    color: white;
+
+
+
+}
+
+.location_title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 3%;
+
+    width: 100%;
+
+    font-size: 40px;
+    height: 100%;
+}
+
+.location_ul {
+
+    display: flex;
+
+    gap: 8%;
+    justify-content: center;
+    margin-bottom: 5%;
+    width: 80vw;
+    font-size: 60px;
+
+
+}
+
+
+.location_item {
+    font-size: 23px;
+
+
+}
