--- a/src/assets/components/styles/Pagination.css
+++ b/src/assets/components/styles/Pagination.css
@@ -1,24 +1,25 @@
 .pagination_dad{
     display: grid;
     gap: 20px;
-    
     grid-auto-rows: auto;
     justify-items: center;
-    
     margin: 0 auto;
-    max-width: 1200px;
-
-border: 1px solid black;
-
-background-color: rgb(129, 129, 129);
-opacity: .5;
-color: aliceblue;
+    max-width:90vw;
+   
+    border-radius: 10px;
+    background-color:#062226;
+    opacity: .8;
+    color: aliceblue;
+   margin-top: 5vh;
+    overflow: hidden;
+    cursor: pointer;
+    opacity: .8;
 }
 
 .pagination{
    
 display: flex;
-gap: 40px;  
+gap: 4vw;  
 height: 40px;
 align-items: center;
 justify-content: center;
@@ -34,14 +35,19 @@ justify-content: center;
     width: 30px;
     height: 30px;
     border-radius: 50%;
+    
 }
 
 .pagination_list:hover{
     background-color: white;
     transition: 300ms ease;
     color: #062226;
+
 }
-.numberPage{
+.setPage{
     background-color: aqua;
+   
+   
+ 
     
 }
