--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .backgroud{
-    /* background-image: url(./assets/imagenes/headerimage.jpg); */
+    background-image: url(./assets/imagenes/headerimage.jpg);
     background-size: cover;
    background-repeat: no-repeat;
     
