--- a/src/assets/components/styles/LocationInfo.css
+++ b/src/assets/components/styles/LocationInfo.css
@@ -1,63 +1,62 @@
 .location_dad_nav {
 
-    display: flex;
-  justify-content: center;
-  align-items: center;
-   padding-left: 5%;
-   padding-right: 5%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   padding-left: 1%;
+   padding-right: 1%;
+   height: 30vh;
    
-   height: 20vh;
- 
 }
 
 
 .location_dad {
   
     width: 80vw;
-    margin-top: 5vh;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
     color: white;
     display: flex;
-    
+
 }
 
 
 .location_ul {
    display:flex;
-   padding-top: 20px;
-   padding-bottom: 20px;
+   margin: 2%;
    justify-content: space-between;
     margin-bottom: 5%;
     width: 80vw;
     background-color: #062226;
-    border: 1px solid white;
+    border-radius: 7%;
+   
    }
 
 
-.location_item {
- 
-    
-   padding-left: 1%;
-   padding-right: 1%;
-}
+
+   
+
 
 @media screen and (min-width: 601px) {
     .location_item {
-      font-size: 2vw;
+      font-size: 2.2vw;
+      padding: 3.5%;
+      font-family: Arial, Helvetica, sans-serif;
     }
   }
   
   /* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
   @media screen and (max-width: 600px) {
     .location_item{
-      font-size: 17px;
-     line-height: 100%;
-     padding: 0;
+      font-size: 3vw;
+    
+     
     }
   }
   @media screen and (max-width: 421px) {
     .location_item{
-      font-size: 4vw;
-     line-height: 100%;
-     padding: 0;
+      font-size: 3vw;
+      
+  
     }
   }
