--- a/src/assets/components/styles/LocationInfo.css
+++ b/src/assets/components/styles/LocationInfo.css
@@ -1,90 +1,63 @@
 .location_dad_nav {
+   
+ 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 3%;
+  margin-bottom: 3%;
+  
+ 
 
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   padding-left: 1%;
-   padding-right: 1%;
-   height: 2vh;
-   margin: 20vh;
 }
 
 
 .location_dad {
-  
-    width: 80vw;
-    padding-top: 5vh;
-    padding-bottom: 5vh;
-    color: white;
-    display: flex;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ 
+  width: 80%;  
+  padding-top: 5vh;
+  padding-bottom: 5vh;
+  color: white;
+  height: 200px;
 
 }
 
 
 .location_ul {
-   display:flex;
- 
-   justify-content: space-between;
-    margin-bottom: 5%;
-    width: 80vw;
-    background-color: #062226;
-    border-radius: 7%;
-   
-   }
-
-.location_ul  span {
-  color :rgba(0, 255, 255, 0.438)
+  display: flex;
+   font-size: 100%;
+   width: 100%;
+   flex-direction: row;
+  justify-content: space-around;
+  
+  align-items: center;
+  background-color: #062226;
+  flex-wrap: wrap;
+  height: 100px;
+  line-height: 2%;
+  
 }
-   
+
+
+
+
+.location_ul span {
+  color: rgba(0, 255, 255, 0.438)
+}
+
 .location_item{
-  margin:3%
+  
+border-radius: 1x solid red;
 }
 
-@media screen and (min-width: 601px) {
-    .location_item {
-      font-size: 2.2vw;
-      padding: 3.5%;
-      font-family: Arial, Helvetica, sans-serif;
-    
-    }
-    .location_item:nth-child(1) { color: rgb(194, 194, 189);}
-    .location_item:nth-child(2) { color: rgba(238, 245, 208, 0.842);}
-    .location_item:nth-child(3) { color: rgb(194, 194, 189);}
-    .location_item:nth-child(4) { color: rgba(238, 245, 208, 0.842);}
-    
-    
-
+@media  (max-width: 480px) {
+  .location_ul
+   {
+  font-size: 80%;
   }
-  
+}
 
-  
-  /* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
-  @media screen and (max-height: 533px) {
-    .location_dad_nav {padding-top: 15vh;padding-bottom: 15vh;
-      
-    }
-} 
 
-  @media screen and (max-width: 600px) {
-    .location_item{
-      font-size: 3vw;
-     }
-     .location_dad_nav {
-      height: 2vh;
-      margin: 10vh;
-      
-     }
-
-  }
-  @media screen and (max-width: 421px) {
-    .location_item{
-      font-size: 3vw;
-
-      }
-      .location_dad_nav {
-        
-         margin: 8vh;
-         padding: 3vh;
-       }
-  }
- 
